--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,22 +1,39 @@
-name: Create Archive
+name: ci
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - 'main'
+
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
+    name: build for amd64
     steps:
-    - uses: actions/checkout@master
-    - name: Archive Release
-      uses: thedoctor0/zip-release@main
-      with:
-        type: 'tar'
-        filename: 'release.tar'
-        exclusions: '*.git* .github'
-    - name: Upload Release
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: "release.tar"
-        token: ${{ secrets.TOKEN }}
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      -
+        name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          platforms: linux/amd64
+          push: true
+          tags: encodev/svtav1enc:latest,encodev/svtav1enc:${{ steps.date.outputs.date }}
