--- a/requirements.txt
+++ b/requirements.txt
@@ -2,27 +2,26 @@ aiohttp
 anitopy
 apscheduler
 aria2p
+certifi
 country_converter
+dnspython
 emoji-country-flag
 feedparser
 html_telegraph_poster
 humanize
-lxml[html_clean]
-telethon==1.38
-tgcrypto
+lxml
 psutil
 pycountry
 pymediainfo
-pymongo[srv]
-pyrogram==2.0.106
-#pyrogram==2.0.73
+pymongo
+pyrogram
 python-decouple
 qbittorrent-api
 quote
 random_word
+requests
+setuptools
+telethon
+tgcrypto
 tzlocal
-#Snyk pins 
-certifi>=2023.7.22 # not directly required, pinned by Snyk to avoid a vulnerability
-dnspython>=2.6.0rc1 # not directly required, pinned by Snyk to avoid a vulnerability
-requests>=2.32.0 # not directly required, pinned by Snyk to avoid a vulnerability
-setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
+yt-dlp
