--- a/requirements.txt
+++ b/requirements.txt
@@ -2,26 +2,26 @@ aiohttp
 anitopy
 apscheduler
 aria2p
-certifi
+certifi>=2023.7.22
 country_converter
-dnspython
+dnspython>=2.6.0rc1
 emoji-country-flag
 feedparser
 html_telegraph_poster
 humanize
-lxml
+lxml[html_clean]
 psutil
 pycountry
 pymediainfo
-pymongo
-pyrogram
+pymongo[srv]
+pyrogram==2.0.106
 python-decouple
 qbittorrent-api
 quote
 random_word
-requests
-setuptools
-telethon
+requests>=2.32.0
+setuptools>=65.5.1
+telethon==1.38
 tgcrypto
 tzlocal
 yt-dlp
